// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`w-exts fixture plan generation (sample-unique-names) generates a plan for sample-unique-names (no packages) 1`] = `
"%syntax-version=1.0.0
%project=sample-unique-names
%uri=sample-unique-names
schemas/unique_names/schema 2017-08-11T08:11:51Z constructive <constructive@5b0c196eeb62> # add schemas/unique_names/schema
schemas/unique_names/tables/words/table [schemas/unique_names/schema] 2017-08-11T08:11:51Z constructive <constructive@5b0c196eeb62> # add schemas/unique_names/tables/words/table
schemas/unique_names/tables/words/indexes/words_type_idx [schemas/unique_names/schema schemas/unique_names/tables/words/table] 2017-08-11T08:11:51Z constructive <constructive@5b0c196eeb62> # add schemas/unique_names/tables/words/indexes/words_type_idx
schemas/unique_names/tables/words/fixtures/1589271124916_fixture [schemas/unique_names/schema schemas/unique_names/tables/words/table] 2017-08-11T08:11:51Z constructive <constructive@5b0c196eeb62> # add schemas/unique_names/tables/words/fixtures/1589271124916_fixture
schemas/unique_names/procedures/generate_name [schemas/unique_names/schema schemas/unique_names/tables/words/table] 2017-08-11T08:11:51Z constructive <constructive@5b0c196eeb62> # add schemas/unique_names/procedures/generate_name"
`;

exports[`w-exts fixture plan generation (sample-unique-names) generates a plan for sample-unique-names (with packages and includeTags) 1`] = `
"%syntax-version=1.0.0
%project=sample-unique-names
%uri=sample-unique-names
schemas/unique_names/schema [pgpm-base32:schemas/base32/procedures/decode pgpm-verify:@0.1.0] 2017-08-11T08:11:51Z constructive <constructive@5b0c196eeb62> # add schemas/unique_names/schema
schemas/unique_names/tables/words/table [schemas/unique_names/schema] 2017-08-11T08:11:51Z constructive <constructive@5b0c196eeb62> # add schemas/unique_names/tables/words/table
schemas/unique_names/tables/words/indexes/words_type_idx [schemas/unique_names/schema schemas/unique_names/tables/words/table] 2017-08-11T08:11:51Z constructive <constructive@5b0c196eeb62> # add schemas/unique_names/tables/words/indexes/words_type_idx
schemas/unique_names/tables/words/fixtures/1589271124916_fixture [schemas/unique_names/schema schemas/unique_names/tables/words/table] 2017-08-11T08:11:51Z constructive <constructive@5b0c196eeb62> # add schemas/unique_names/tables/words/fixtures/1589271124916_fixture
schemas/unique_names/procedures/generate_name [schemas/unique_names/schema schemas/unique_names/tables/words/table] 2017-08-11T08:11:51Z constructive <constructive@5b0c196eeb62> # add schemas/unique_names/procedures/generate_name"
`;

exports[`w-exts fixture plan generation (sample-unique-names) generates a plan for sample-unique-names (with packages) 1`] = `
"%syntax-version=1.0.0
%project=sample-unique-names
%uri=sample-unique-names
schemas/unique_names/schema [pgpm-base32:schemas/base32/procedures/decode pgpm-verify:procedures/verify_view] 2017-08-11T08:11:51Z constructive <constructive@5b0c196eeb62> # add schemas/unique_names/schema
schemas/unique_names/tables/words/table [schemas/unique_names/schema] 2017-08-11T08:11:51Z constructive <constructive@5b0c196eeb62> # add schemas/unique_names/tables/words/table
schemas/unique_names/tables/words/indexes/words_type_idx [schemas/unique_names/schema schemas/unique_names/tables/words/table] 2017-08-11T08:11:51Z constructive <constructive@5b0c196eeb62> # add schemas/unique_names/tables/words/indexes/words_type_idx
schemas/unique_names/tables/words/fixtures/1589271124916_fixture [schemas/unique_names/schema schemas/unique_names/tables/words/table] 2017-08-11T08:11:51Z constructive <constructive@5b0c196eeb62> # add schemas/unique_names/tables/words/fixtures/1589271124916_fixture
schemas/unique_names/procedures/generate_name [schemas/unique_names/schema schemas/unique_names/tables/words/table] 2017-08-11T08:11:51Z constructive <constructive@5b0c196eeb62> # add schemas/unique_names/procedures/generate_name"
`;
